FIX: Dropdown menu not scrollable on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -8,17 +8,25 @@
 }
 
 /* Additional Resets */
-button:focus, .btn:focus {
+button:focus,
+.btn:focus {
     outline-style: none;
     box-shadow: none;
     border-color: transparent;
 }
 
 footer {
-position: fixed;
-bottom: 0;
-left: 0;
-width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+@media screen and (max-width:999px) {
+    .dropdown-menu {
+        height: 100vh;
+        overflow-y: auto;
+    }
 }
 
 .btn.btn-submit.accent-light:hover {
@@ -62,8 +70,7 @@ span,
 strong,
 a,
 ul,
-li
- {
+li {
     color: var(--site-text);
     font-family: 'Nunito', sans-serif;
 }
@@ -72,7 +79,9 @@ h1 {
     font-weight: 700;
 }
 
-.card-action, h2, .nav-link {
+.card-action,
+h2,
+.nav-link {
     font-weight: 500;
 }
 
@@ -83,7 +92,7 @@ h1 {
 /* HomePage */
 
 .carousel-caption {
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .carousel-caption>h5 {
@@ -203,19 +212,21 @@ a:hover {
 }
 
 .accounts-footer-decor:after {
-    content: ""; 
-    position: absolute; 
+    content: "";
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(250, 250, 250, 1)); 
-    opacity: 0.5; 
+    background-image: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(250, 250, 250, 1));
+    opacity: 0.5;
 }
 
 .accounts-footer-decor img {
-    display: block; /* Remove any default spacing */
-    width: 100%; /* Make sure the image fills the container */
+    display: block;
+    /* Remove any default spacing */
+    width: 100%;
+    /* Make sure the image fills the container */
 }
 
 .messages-fixed {
@@ -280,11 +291,11 @@ input:focus-visible {
 
 .character-link-image {
     width: 40px;
-    transition: transform 0.3s ease-in-out;  
+    transition: transform 0.3s ease-in-out;
 }
 
 .copyright-block {
-    margin-left: auto; 
+    margin-left: auto;
     display: flex;
     flex-direction: row-reverse;
     gap: 15px;
@@ -292,7 +303,7 @@ input:focus-visible {
 }
 
 .character-link-image:hover {
-    transform: translate(0, -10%);   
+    transform: translate(0, -10%);
 }
 
 .character-name {
@@ -324,6 +335,7 @@ input:focus-visible {
 .link-highlight:hover {
     color: var(--highlight-dark) !important;
 }
+
 /* Media Queries */
 
 @media screen and (max-width:1200px) {
@@ -368,6 +380,7 @@ input:focus-visible {
         flex-direction: column;
         align-items: center;
     }
+
     .copyright-block p {
         font-size: 0.8rem;
     }
